; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/extr_tun.c_tun_xdp_query.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/extr_tun.c_tun_xdp_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.tun_struct = type { i32 }
%struct.bpf_prog = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @tun_xdp_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tun_xdp_query(%struct.net_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.tun_struct*, align 8
  %5 = alloca %struct.bpf_prog*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.tun_struct* @netdev_priv(%struct.net_device* %6)
  store %struct.tun_struct* %7, %struct.tun_struct** %4, align 8
  %8 = load %struct.tun_struct*, %struct.tun_struct** %4, align 8
  %9 = getelementptr inbounds %struct.tun_struct, %struct.tun_struct* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.bpf_prog* @rtnl_dereference(i32 %10)
  store %struct.bpf_prog* %11, %struct.bpf_prog** %5, align 8
  %12 = load %struct.bpf_prog*, %struct.bpf_prog** %5, align 8
  %13 = icmp ne %struct.bpf_prog* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load %struct.bpf_prog*, %struct.bpf_prog** %5, align 8
  %16 = getelementptr inbounds %struct.bpf_prog, %struct.bpf_prog* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %2, align 4
  br label %21

20:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %14
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.tun_struct* @netdev_priv(%struct.net_device*) #1

declare dso_local %struct.bpf_prog* @rtnl_dereference(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
